@@ -28,6 +28,7 @@
 #include <iostream>
 #include <sstream>
 #include <Context.h>
+#include <Filter.h>
 #include <JSON.h>
 #include <text.h>
 #include <util.h>
@@ -53,6 +54,10 @@ int CmdImport::execute (std::string& output)
 {
   int rc = 0;
   int count = 0;
+
+  Filter filter;
+  if (filter.hasFilter ())
+    throw std::string (STRING_ERROR_NO_FILTER);
 
   // Get filenames from command line arguments.
   std::vector <std::string> words = context.cli2.getWords ();
