@@ -28,6 +28,7 @@
 #include <sstream>
 #include <algorithm>
 #include <Context.h>
+#include <Filter.h>
 #include <ViewText.h>
 #include <text.h>
 #include <i18n.h>
@@ -48,6 +49,12 @@ CmdReports::CmdReports ()
 ////////////////////////////////////////////////////////////////////////////////
 int CmdReports::execute (std::string& output)
 {
+  Filter filter;
+  if (filter.hasFilter ())
+    throw std::string (STRING_ERROR_NO_FILTER);
+  if (filter.hasModifications ())
+    throw std::string (STRING_ERROR_NO_MODS);
+
   std::vector <std::string> reports;
 
   // Add custom reports.
