@@ -26,6 +26,7 @@
 
 #include <cmake.h>
 #include <Context.h>
+#include <Filter.h>
 #include <i18n.h>
 #include <CmdUndo.h>
 
@@ -44,6 +45,12 @@ CmdUndo::CmdUndo ()
 ////////////////////////////////////////////////////////////////////////////////
 int CmdUndo::execute (std::string& output)
 {
+  Filter filter;
+  if (filter.hasFilter ())
+    throw std::string (STRING_ERROR_NO_FILTER);
+  if (filter.hasModifications ())
+    throw std::string (STRING_ERROR_NO_MODS);
+
   // Detect attempts to modify the task.
   if (context.cli2.getWords ().size ())
     throw std::string (STRING_CMD_UNDO_MODS);
