@@ -28,6 +28,7 @@
 #include <sstream>
 #include <stdlib.h>
 #include <Context.h>
+#include <Filter.h>
 #include <ViewText.h>
 #ifdef HAVE_COMMIT
 #include <commit.h>
@@ -51,6 +52,12 @@ CmdVersion::CmdVersion ()
 ////////////////////////////////////////////////////////////////////////////////
 int CmdVersion::execute (std::string& output)
 {
+  Filter filter;
+  if (filter.hasFilter ())
+    throw std::string (STRING_ERROR_NO_FILTER);
+  if (filter.hasModifications ())
+    throw std::string (STRING_ERROR_NO_MODS);
+
   std::stringstream out;
 
   // Create a table for the disclaimer.
